<resources>
    <string name="app_name">PickCash</string>
    <string name="login_tip">Please register with the mobile number which is linked to your Aadhaar number to enable KYC and eSign</string>
    <string name="permission_tip">You can view the full version of the <a href = "https://www.baidu.com">"User Agreement"</a> and <a href = "https://www.baidu.com">"Privacy Policy"</a>. After you agree and accept, you will be able to use our products.</string>
    <string name="permission_title">Get permission instructions \nCash Bear needs to collect the following personal/sensitive information, and with your consent, you can use the app functions normally, including:</string>
    <string name="permission_tip1">We will collect all your mobile phone numbers and contact names from your device phone book;\nAfter we collect it, we will use it to: help you pre-fill your contact information, use it to test the loan risk control system, help you verify your loan eligibility, speed up the loan application process, and send a collection text message when you are overdue;\nYour information will be kept confidential and encrypted on our server and will not be disclosed to any third party. It is only used by this app.</string>
    <string name="permission_tip2">We will collect all application names, application installation time, and application version numbers from the application directory installed on your device;\nAfter we collect it, we will use it to: verify your loan eligibility in the loan risk control system, and help you recommend loan products that are more in line with your eligibility;\nYour information will be kept confidential and encrypted and stored on our server, and will not be disclosed to any third party, only for the use of this app.</string>
    <string name="permission_tip3">We will collect storage information from your device, including hard disk size and memory size;\nAfter we collect it, we will use it to: verify your loan eligibility in the risk control system;\nYour information will be kept confidential and encrypted and stored on our server, and will not be disclosed to any third party, only for the use of this app.</string>
    <string name="permission_tip4">We need access to your camera;\nAfter we collect it, we will use it to: take ID photos and perform facial recognition to confirm your real identity and speed up your loan application process;\nYour information will be stored confidentially and encrypted on our servers, will not be disclosed to any third party, and will only be used by this app.</string>
    <string name="permission_tip5">We need to obtain your location permission and collect your GPS location when you fill in your geographic location;\nAfter we collect the location information, we will use it to: confirm whether your location is within our service area;\nYour information will be stored confidentially and encrypted on our servers, will not be disclosed to any third party, and will only be used by this app.</string>
    <string name="permission_tip6">This permission is required so that your can safely download the loan account statement and save it on your phone .You can upload the correct documents for faster loan approval and repayment as well in addition,this permission helps to provuide a very smooth App-using experience</string>
    <string name="permission_tip7">We will obtain your identity verification information from your ID photo;\nWe will read the ID number based on the ID photo, help you pre-fill information and confirm your qualifications, and provide corresponding loan services based on your qualifications;\nYour information will be stored confidentially and encrypted on our servers, will not be disclosed to any third party, and will only be used by this app.</string>
    <string name="permission_tip8">We need to obtain your device, carrier and network information;\nAfter we collect it, it will be applied to: ensure that your device and network are normal, and that you can use the program normally;\nYour information will be stored confidentially and encrypted on our servers, will not be disclosed to any third party, and will only be used by this app.</string>
    <string name="permission_total">The above permissions will not be enabled by default, and will only be enabled after you click to confirm the authorization, and will be used when implementing functions or services. We promise that if you choose to leave or close the page of the current disclosure statement, your information will not be collected. And your information will not be collected when the service is not required</string>
</resources>