<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#90000000"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/permission_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.5dp"
            android:layout_marginBottom="13.5dp"
            android:text="Permissions"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_title"
                    android:textColor="#ffffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9.5dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Contact list and SMS information"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_tip1"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Application"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_tip2"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Device storage information"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_tip3"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Camera permissions"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_tip4"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Location Information"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_tip5"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Storage"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_tip6"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Authentication Information"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_tip7"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10.5dp"
                    android:text="Device, carrier and network information"
                    android:textAppearance="@style/Permission_title_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_tip8"
                    android:textAppearance="@style/Permission_tip_style"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/permission_total"
                    android:textAppearance="@style/Permission_tip_style"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <TextView
        android:id="@+id/login_permission_tip"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.5dp"
        android:text="@string/permission_tip"
        android:textColor="#ffffffff"
        android:textSize="11sp"/>
    <TextView
        android:id="@+id/login_permission_ok"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="OK"
        android:textSize="16sp"
        android:textColor="#421414"
        android:textStyle="bold"
        android:background="@drawable/permission_ok_btn_bg"/>
</LinearLayout>